[package]
name = "note-wiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#ipfs = "0.2.0"
#smol = "1.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
anyhow = "1.0"
base64 = "0.13"
serde_ipld_dagcbor = "0.1.0"
