[package]
name = "thanks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#smol = "1.2"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
anyhow = "1.0"
base64 = "0.13"
structopt = "0.3"
pest = "2.1.3"
pest_derive = "2.1.0"
